about, contact page z-index fix
모바일 gnb 동작 관련해서 컨텐츠 순서가 dim 아래로 내리도록 수정함.

--- a/css/style.css
+++ b/css/style.css
@@ -755,10 +755,12 @@ media query
 		margin-left: initial;
     padding: 0;
     -webkit-overflow-scrolling: touch;
+    z-index: -1;
 	}
 
   #index-container {
     padding: 80px 8px 0 8px;
+    z-index: -1;
   }
 
   #post-container {
